# boggle-cpp

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Dict.cpp  Dict.h  DictMain.cpp  FoundWord.cpp  FoundWord.h  Makefile  README.md  Solver.cpp  Solver.h  TrieResultEnum.h  main
dictionaries/: smalldict1.txt
web/: boggle.js  index.html
web/src/: boggle.js  boggle.wasm  main.js
web/styles/: style.css
